@@ -27,7 +27,7 @@ ForcedObsoletes=esound, esound-common, slocate, ksplash-engine-moodin, powernowd
 # libflashsupport is now oboselete and causes problems so we remove it
 # early
 PostUpgradeRemove=libflashsupport
-PostUpgradeUpgrade=brasero,mysql-server
+PostUpgradeUpgrade=brasero
 PostInstallScripts=./xorg_fix_proprietary.py
 EnableApport=yes
 # this supported blacklisting certain versions to ensure we do not upgrade
