@@ -5,6 +5,9 @@ update-manager (1:0.126.4) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeQuirks.py:
     - add check if NBD clustering is in use in mysql server
       and do not upgrade to 5.1 is it is (LP: #450837)
+  * DistUpgrade/DistUpgrade.cfg:
+    - remove mysql-server rule, this is now done in the above 
+      quirks handler
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 15 Oct 2009 22:51:33 +0200
 
